style: fixes username dropping down on small widths

--- a/src/components/rux-global-status-bar/rux-global-status-bar.scss
+++ b/src/components/rux-global-status-bar/rux-global-status-bar.scss
@@ -45,6 +45,10 @@ slot[name='app-meta'] > * {
     color: var(--inputBackground);
 }
 
+.app-meta {
+    min-width: 170px;
+}
+
 .app-info-wrapper {
     flex-basis: 100%;
     display: flex;
